--- a/src/test/java/day3/todo
+++ b/src/test/java/day3/todo
@@ -4,12 +4,13 @@ constructor -- done
 construct vs method - done
 inheritance -- done
 
-Encapsulation
+Encapsulation -done
 polymorph
 abstract
 Interface
 
-Execption Handling
+Execption Handling** - done
+
 
 File Handling
 txt
@@ -26,3 +27,6 @@ map
 TestNG
 
 Appium
+
+
+https://github.com/aravindanath/Assignment_ProgramsLevel_Two.git
