--- a/src/test/java/Todo
+++ b/src/test/java/Todo
@@ -1,8 +1,8 @@
 Price comparisons --Done
-tap
-longpress
+tap -- done
+longpress -- done
 Keyboard -- Done
-notification
-scroll
-switiching app
+notification -- Done
+scroll -- Done
+switiching app  
 Takeing source code of app -- Done
